tests/snapshots/examples_advanced/using_modules.snap
---
source: tests/examples_advanced_snapshots.rs
---
Fixture: examples/advanced/using_modules.flx
== compile ==
failed (module)
== diagnostics ==
--> compiler error[E018]: IMPORT NOT FOUND

Cannot find module `Modules.FunctionalUtils` to import.

  --> examples/advanced/using_modules.flx:16:1
   |
16 | import Modules.FunctionalUtils as FU
   | ^

Hint:
  Check that: 1) The module file exists (e.g., `Modules.FunctionalUtils.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `Modules.FunctionalUtils` under roots: examples/advanced, src (imported from examples/advanced/using_modules.flx).
== stdout ==
<not executed>
